force-app/main/default/objects/License_REST_API_Setting__mdt/License_REST_API_Setting__mdt.object-meta.xml
<CustomObject>
    <label>License REST API Setting</label>
    <pluralLabel>License REST API Settings</pluralLabel>
</CustomObject>