force-app/main/default/objects/License_REST_API_Setting__mdt/fields/API_Consumed__c.field-meta.xml
<CustomField>
    <fullName>API_Consumed__c</fullName>
    <label>API Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>