force-app/main/default/objects/License_REST_API_Setting__mdt/fields/Login_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Login_User_Name__c</fullName>
    <label>Login User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>