force-app/main/default/objects/License_REST_API_Setting__mdt/fields/Max_Record_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Record_Size__c</fullName>
    <description>he Max number of license which will be returned in the APIs.</description>
    <label>Max Record Size</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>