force-app/main/default/objects/License_REST_API_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Login_User_Name__c</columns>
    <columns>Max_Record_Size__c</columns>
    <columns>API_Limit__c</columns>
    <columns>API_Consumed__c</columns>
    <columns>Last_Login__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>